--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,94 +1,70 @@
 {% extends 'base.html' %}
 {% block title %}
-  {{ title }}
-{% endblock %}
+  {% if is_edit %}       
+    Редактировать пост
+  {% else %}
+    Новый пост
+  {% endif %}
+{% endblock title %}
 {% block content %}
 {% load user_filters %}
-    <main>
-      <div class="container py-5">
-        <div class="row justify-content-center">
-          <div class="col-md-8 p-5">
-            <div class="card">
-              {% if is_edit %}
-              <div class="card-header">       
-                Редактировать запись           
-              </div>
-              <div class="card-body">      
-                <form method="post" action="{% url 'posts:post_edit' post.id %}">
-                  {% csrf_token %}                     
-                    {% for field in form %}
-                      <div class="form-group row my-3"
-                        {% if field.field.required %} 
-                          aria-required="true"
-                        {% else %}
-                          aria-required="false"
-                        {% endif %}
-                      >
-                        <label for="{{ field.id_for_label }}">
-                          {{ field.label }}
-                            {% if field.field.required %}
-                              <span class="required text-danger">*</span>
-                            {% endif %}
-                        </label>
-                          <div>
-                          {{ field|addclass:'form-control' }}
-                            {% if field.help_text %}
-                              <small id="{{ field.id_for_label }}-help" class="form-text text-muted">
-                                {{ field.help_text|safe }}
-                              </small>
-                            {% endif %}
-                          </div>
-                        </div>
-                      {% endfor %}
-                  <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-primary">
-                      Добавить
-                    </button>
-                  </div>
-                </form>
-              </div>
+  <main>
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-8 p-5">
+          <div class="card">
+            <div class="card-header">
+              {% if is_edit %}       
+                Редактировать пост
               {% else %}
-              <div class="card-header">       
-                Добавить запись           
-              </div>
-              <div class="card-body">
-                <form method="post" action="{% url 'posts:create_post' %}">
-                  {% csrf_token %}                     
-                    {% for field in form %}
-                      <div class="form-group row my-3"
-                        {% if field.field.required %} 
-                          aria-required="true"
-                        {% else %}
-                          aria-required="false"
-                        {% endif %}
-                      >
-                        <label for="{{ field.id_for_label }}">
-                          {{ field.label }}
-                            {% if field.field.required %}
-                              <span class="required text-danger">*</span>
-                            {% endif %}
-                        </label>
-                          <div>
-                          {{ field|addclass:'form-control' }}
-                            {% if field.help_text %}
-                              <small id="{{ field.id_for_label }}-help" class="form-text text-muted">
-                                {{ field.help_text|safe }}
-                              </small>
-                            {% endif %}
-                          </div>
-                        </div>
-                      {% endfor %}
-                  <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-primary">
-                      Сохранить
-                    </button>
-                  </div>
-                </form>
-              </div>
-              {% endif %}
+                Новый пост
+              {% endif %}             
             </div>
+            <div class="card-body">
+              {% if is_edit %}      
+                <form method="post" action="{% url 'posts:post_edit' post.id %}">
+              {% else %}
+                <form method="post" action="{% url 'posts:create_post' %}">
+              {% endif %}    
+              {% csrf_token %}                     
+              {% for field in form %}
+                <div class="form-group row my-3"
+                  {% if field.field.required %} 
+                    aria-required="true"
+                  {% else %}
+                    aria-required="false"
+                  {% endif %}
+                  >
+                  <label for="{{ field.id_for_label }}">
+                    {{ field.label }}
+                    {% if field.field.required %}
+                      <span class="required text-danger">*</span>
+                    {% endif %}
+                  </label>
+                  <div>
+                    {{ field|addclass:'form-control' }}
+                    {% if field.help_text %}
+                      <small id="{{ field.id_for_label }}-help" class="form-text text-muted">
+                        {{ field.help_text|safe }}
+                      </small>
+                    {% endif %}
+                  </div>
+                </div>
+              {% endfor %}
+                <div class="d-flex justify-content-end">
+                  <button type="submit" class="btn btn-primary">
+                    {% if is_edit %}       
+                      Добавить
+                    {% else %}
+                      Сохранить
+                    {% endif %}
+                  </button>
+                </div>
+                </form>
+            </div> 
           </div>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 {% endblock content %}    
